Use input as this value.

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ var value = spinner.val(); // 3
         <div class="col-sm-6">
           <form role="form">
             <div class="form-group">
-              <div class="input-group spinner">
-                <input type="text" name="font-size" class="form-control" value="12" data-format="%d pt" data-min="6" data-max="20">
+              <div class="input-group">
+                <input type="text" name="font-size" class="form-control spinner" value="12" data-format="%d pt" data-min="6" data-max="20">
                 <span class="input-group-btn">
                   <button class="btn btn-default" type="button" data-incr="-1">–</button>
                   <button class="btn btn-default" type="button" data-incr="1">+</button>
@@ -75,8 +75,8 @@ var value = spinner.val(); // 3
           </form>
         </div>
         <div class="col-sm-6">
-          <code class="language-markup">&lt;div class="input-group spinner"&gt;
-  &lt;input type="text" name="font-size" class="form-control"
+          <code class="language-markup">&lt;div class="input-group"&gt;
+  &lt;input type="text" name="font-size" class="form-control spinner"
     value="12" data-format="%d pt" data-min="6" data-max="20"&gt;
   &lt;span class="input-group-btn"&gt;
     &lt;button class="btn btn-default" type="button" data-incr="-1"&gt;–&lt;/button&gt;
@@ -91,8 +91,8 @@ var value = spinner.val(); // 3
         <div class="col-sm-6">
           <form role="form">
             <div class="form-group">
-              <div class="input-group spinner">
-                <input type="text" name="font-size" class="form-control" value="1.09" data-format="$ %.2f" data-min="0" data-max="2">
+              <div class="input-group">
+                <input type="text" name="font-size" class="form-control spinner" value="1.09" data-format="$ %.2f" data-min="0" data-max="2">
                 <span class="input-group-btn">
                   <button class="btn btn-default" type="button" data-incr="-0.01">–</button>
                   <button class="btn btn-default" type="button" data-incr="0.01">+</button>
@@ -102,8 +102,8 @@ var value = spinner.val(); // 3
           </form>
         </div>
         <div class="col-sm-6">
-          <code class="language-markup">&lt;div class="input-group spinner"&gt;
-  &lt;input type="text" name="font-size" class="form-control"
+          <code class="language-markup">&lt;div class="input-group"&gt;
+  &lt;input type="text" name="font-size" class="form-control spinner"
     value="1.09" data-format="$ %.2f" data-min="0" data-max="2"&gt;
   &lt;span class="input-group-btn"&gt;
     &lt;button class="btn btn-default" type="button" data-incr="-0.01"&gt;–&lt;/button&gt;
@@ -118,8 +118,8 @@ var value = spinner.val(); // 3
         <div class="col-sm-6">
           <form role="form">
             <div class="form-group">
-              <div class="input-group" id="options-demo-spinner">
-                <input type="text" name="font-size" class="form-control">
+              <div class="input-group">
+                <input type="text" name="font-size" class="form-control" id="options-demo-spinner">
                 <span class="input-group-btn">
                   <button class="btn btn-default" type="button" data-incr="-1">–</button>
                   <button class="btn btn-default" type="button" data-incr="1">+</button>
@@ -141,8 +141,8 @@ var value = spinner.val(); // 3
           <div class="col-sm-6">
             <form role="form">
               <div class="form-group">
-                <div class="input-group" id="event-demo-spinner">
-                  <input type="text" name="font-size" class="form-control" value="5" data-format="%d mm" data-min="0" data-max="20">
+                <div class="input-group">
+                  <input type="text" name="font-size" class="form-control" id="event-demo-spinner" value="5" data-format="%d mm" data-min="0" data-max="20">
                   <span class="input-group-btn">
                     <button class="btn btn-default" type="button" data-incr="-1">–</button>
                     <button class="btn btn-default" type="button" data-incr="1">+</button>
