Fix JS initialization; improve handling of enter key.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@ var value = spinner.val(); // 3
             <form role="form">
               <div class="form-group">
                 <div class="input-group">
-                  <input type="text" name="font-size" class="form-control" id="event-demo-spinner" value="5" data-format="%d mm" data-min="0" data-max="20">
+                  <input type="text" name="font-size" class="form-control" id="event-demo-spinner"
+                    value="5" data-format="%d mm">
                   <span class="input-group-btn">
                     <button class="btn btn-default" type="button" data-incr="-1">–</button>
                     <button class="btn btn-default" type="button" data-incr="1">+</button>
